<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_menu_recipe"
            android:title="@string/Recipes" />
        <item
            android:id="@+id/nav_create_recipe"
            android:icon="@drawable/ic_menu_create_recipe"
            android:title="@string/CreateRecipe"
            />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_friends"
            android:title="@string/Friends" />
    </group>
</menu>
