<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_createRecipe"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.semester2finalproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.semester2finalproject.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_create_recipe"
        android:name="com.example.semester2finalproject.CreateRecipe"
        android:label="@string/CreateRecipe"
        tools:layout="@layout/fragment_create_recipe" />

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.semester2finalproject.RecipeListFragment"
        android:label="@string/Recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.semester2finalproject.Friends"
        android:label="@string/Friends"
        tools:layout="@layout/fragment_friends" />
</navigation>